// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
.emotion-0 {
  padding: 0;
  outline: none;
  border: none;
  display: inline-block;
  cursor: pointer;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(255,255,255,0);
  font-size: 24px;
  font-weight: 300;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Open Sans','Helvetica Neue',sans-serif;
  line-height: 1.3;
  color: #404040;
  background: transparent;
  position: relative;
  margin: 0.3em;
}

.emotion-0 > .hj-button-main {
  position: relative;
  z-index: 2;
}

.emotion-0:after {
  content: '';
  position: absolute;
  z-index: 1;
  top: 60%;
  left: -0.2em;
  right: -0.2em;
  bottom: 0;
  -webkit-transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  background-color: rgba(255,111,97,0.5);
}

.emotion-0:hover:after {
  top: 0;
}

.emotion-0:active:after {
  background-color: rgba(255,111,97,0.6);
  box-shadow: 0 0 0 3px rgba(255,111,97,0.2);
}

<button
  className="emotion-0"
  type="button"
>
  <div
    className="hj-button-main"
  >
    Default
  </div>
</button>
`;

exports[`Button renders style rules -> circle 1`] = `
.emotion-0 {
  padding: 0;
  outline: none;
  border: none;
  display: inline-block;
  cursor: pointer;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(255,255,255,0);
  font-size: 24px;
  font-weight: 300;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Open Sans','Helvetica Neue',sans-serif;
  line-height: 1.3;
  color: #404040;
  background: transparent;
  position: relative;
  margin: 0.3em;
  width: 1.3em;
  height: 1.3em;
  overflow: hidden;
  border-radius: 50%;
  border: 1px solid rgba(255,111,97,0.5);
  -webkit-transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
}

.emotion-0 > .hj-button-main {
  position: relative;
  z-index: 2;
}

.emotion-0:after {
  content: '';
  position: absolute;
  z-index: 1;
  top: 60%;
  left: -0.2em;
  right: -0.2em;
  bottom: 0;
  -webkit-transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  background-color: rgba(255,111,97,0.5);
}

.emotion-0:hover:after {
  top: 0;
}

.emotion-0:active:after {
  background-color: rgba(255,111,97,0.6);
  box-shadow: 0 0 0 3px rgba(255,111,97,0.2);
}

.emotion-0:active {
  box-shadow: 0 0 0 3px rgba(255,111,97,0.2);
}

.emotion-0 > .hj-button-main {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  className="emotion-0"
  type="button"
>
  <div
    className="hj-button-main"
  >
    C
  </div>
</button>
`;

exports[`Button renders style rules -> disabled 1`] = `
.emotion-0 {
  padding: 0;
  outline: none;
  border: none;
  display: inline-block;
  cursor: pointer;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(255,255,255,0);
  font-size: 24px;
  font-weight: 300;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Open Sans','Helvetica Neue',sans-serif;
  line-height: 1.3;
  color: #404040;
  background: transparent;
  position: relative;
  margin: 0.3em;
  cursor: not-allowed;
  color: #888;
}

.emotion-0 > .hj-button-main {
  position: relative;
  z-index: 2;
}

.emotion-0:after {
  content: '';
  position: absolute;
  z-index: 1;
  top: 60%;
  left: -0.2em;
  right: -0.2em;
  bottom: 0;
  -webkit-transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  background-color: rgba(255,111,97,0.5);
}

.emotion-0:hover:after {
  top: 0;
}

.emotion-0:active:after {
  background-color: rgba(255,111,97,0.6);
  box-shadow: 0 0 0 3px rgba(255,111,97,0.2);
}

.emotion-0:after {
  background-color: rgba(136,136,136,0.2);
}

.emotion-0:hover:after {
  top: 60%;
}

.emotion-0:active:after {
  top: 60%;
  background-color: rgba(136,136,136,0.2);
  box-shadow: none;
}

<button
  className="emotion-0"
  disabled={true}
  type="button"
>
  <div
    className="hj-button-main"
  >
    Disabled
  </div>
</button>
`;

exports[`Button renders style rules -> ghost 1`] = `
.emotion-0 {
  padding: 0;
  outline: none;
  border: none;
  display: inline-block;
  cursor: pointer;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(255,255,255,0);
  font-size: 24px;
  font-weight: 300;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Open Sans','Helvetica Neue',sans-serif;
  line-height: 1.3;
  color: #404040;
  background: transparent;
  position: relative;
  margin: 0.3em;
  color: #fff;
}

.emotion-0 > .hj-button-main {
  position: relative;
  z-index: 2;
}

.emotion-0:after {
  content: '';
  position: absolute;
  z-index: 1;
  top: 60%;
  left: -0.2em;
  right: -0.2em;
  bottom: 0;
  -webkit-transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  background-color: rgba(255,111,97,0.5);
}

.emotion-0:hover:after {
  top: 0;
}

.emotion-0:active:after {
  background-color: rgba(255,111,97,0.6);
  box-shadow: 0 0 0 3px rgba(255,111,97,0.2);
}

.emotion-0:after {
  background-color: rgba(255,255,255,0.4);
}

.emotion-0:active:after {
  background-color: rgba(64,64,64,0.0009999999999999432);
  box-shadow: 0 0 0 3px rgba(255,255,255,0.2);
}

<button
  className="emotion-0"
  type="button"
>
  <div
    className="hj-button-main"
  >
    Ghost
  </div>
</button>
`;

exports[`Button renders style rules -> primary 1`] = `
.emotion-0 {
  padding: 0;
  outline: none;
  border: none;
  display: inline-block;
  cursor: pointer;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(255,255,255,0);
  font-size: 24px;
  font-weight: 300;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Open Sans','Helvetica Neue',sans-serif;
  line-height: 1.3;
  color: #404040;
  background: transparent;
  position: relative;
  margin: 0.3em;
}

.emotion-0 > .hj-button-main {
  position: relative;
  z-index: 2;
}

.emotion-0:after {
  content: '';
  position: absolute;
  z-index: 1;
  top: 60%;
  left: -0.2em;
  right: -0.2em;
  bottom: 0;
  -webkit-transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  background-color: rgba(255,111,97,0.5);
}

.emotion-0:hover:after {
  top: 0;
}

.emotion-0:active:after {
  background-color: rgba(255,111,97,0.6);
  box-shadow: 0 0 0 3px rgba(255,111,97,0.2);
}

.emotion-0:after {
  top: 0;
}

.emotion-0:hover:after {
  top: 60%;
}

.emotion-0:active:after {
  top: 100%;
}

<button
  className="emotion-0"
  type="button"
>
  <div
    className="hj-button-main"
  >
    Default
  </div>
</button>
`;

exports[`Button renders style rules -> size 1`] = `
.emotion-0 {
  padding: 0;
  outline: none;
  border: none;
  display: inline-block;
  cursor: pointer;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(255,255,255,0);
  font-size: 24px;
  font-weight: 300;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Open Sans','Helvetica Neue',sans-serif;
  line-height: 1.3;
  color: #404040;
  background: transparent;
  position: relative;
  margin: 0.3em;
  font-size: 16px;
}

.emotion-0 > .hj-button-main {
  position: relative;
  z-index: 2;
}

.emotion-0:after {
  content: '';
  position: absolute;
  z-index: 1;
  top: 60%;
  left: -0.2em;
  right: -0.2em;
  bottom: 0;
  -webkit-transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  background-color: rgba(255,111,97,0.5);
}

.emotion-0:hover:after {
  top: 0;
}

.emotion-0:active:after {
  background-color: rgba(255,111,97,0.6);
  box-shadow: 0 0 0 3px rgba(255,111,97,0.2);
}

<button
  className="emotion-0"
  type="button"
>
  <div
    className="hj-button-main"
  >
    C
  </div>
</button>
`;

exports[`Button renders style rules -> size 2`] = `
.emotion-0 {
  padding: 0;
  outline: none;
  border: none;
  display: inline-block;
  cursor: pointer;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(255,255,255,0);
  font-size: 24px;
  font-weight: 300;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Open Sans','Helvetica Neue',sans-serif;
  line-height: 1.3;
  color: #404040;
  background: transparent;
  position: relative;
  margin: 0.3em;
  font-size: 38px;
}

.emotion-0 > .hj-button-main {
  position: relative;
  z-index: 2;
}

.emotion-0:after {
  content: '';
  position: absolute;
  z-index: 1;
  top: 60%;
  left: -0.2em;
  right: -0.2em;
  bottom: 0;
  -webkit-transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  background-color: rgba(255,111,97,0.5);
}

.emotion-0:hover:after {
  top: 0;
}

.emotion-0:active:after {
  background-color: rgba(255,111,97,0.6);
  box-shadow: 0 0 0 3px rgba(255,111,97,0.2);
}

<button
  className="emotion-0"
  type="button"
>
  <div
    className="hj-button-main"
  >
    C
  </div>
</button>
`;

exports[`Button renders style rules -> text 1`] = `
.emotion-0 {
  padding: 0;
  outline: none;
  border: none;
  display: inline-block;
  cursor: pointer;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(255,255,255,0);
  font-size: 24px;
  font-weight: 300;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Open Sans','Helvetica Neue',sans-serif;
  line-height: 1.3;
  color: #404040;
  background: transparent;
  position: relative;
  margin: 0.3em;
}

.emotion-0 > .hj-button-main {
  position: relative;
  z-index: 2;
}

.emotion-0:after {
  content: '';
  position: absolute;
  z-index: 1;
  top: 60%;
  left: -0.2em;
  right: -0.2em;
  bottom: 0;
  -webkit-transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  transition: 300ms cubic-bezier(0.25,0.8,0.5,1);
  background-color: rgba(255,111,97,0.5);
}

.emotion-0:hover:after {
  top: 0;
}

.emotion-0:active:after {
  background-color: rgba(255,111,97,0.6);
  box-shadow: 0 0 0 3px rgba(255,111,97,0.2);
}

.emotion-0:after {
  top: 100%;
}

.emotion-0:hover:after {
  top: 0;
}

.emotion-0:active:after {
  background-color: rgba(255,111,97,0.6);
  box-shadow: 0 0 0 3px rgba(255,111,97,0.2);
}

<button
  className="emotion-0"
  type="button"
>
  <div
    className="hj-button-main"
  >
    Text
  </div>
</button>
`;
